--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ip_address_tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://an301290.github.io/IP_Address_Tracker",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -27,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +52,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.5.0",
+    "gh-pages": "^6.1.1",
     "prettier": "^3.3.3"
   }
 }
