--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ip_address_tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://An301290.github.io/IP_Address_Tracker",
+  "homepage": "https://an301290.github.io/IP_Address_Tracker",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
